# HewDraw-Remix

./: .gitattributes  .gitignore  Cargo.toml  README.md  aerials.rs  build.rs  hdr_version.txt  other.rs  smashes.rs
core/: Cargo.toml  build.rs  rom_watch.txt
core/src/: lib.rs  modules.rs  modules_import.rs  offsets.rs  singletons.rs  utils.rs
core/src/modules/: buffer.rs  param.rs
core/src/modules_import/: buffer.rs
crates/base/: Cargo.toml
crates/base/src/: modules.rs  ui.rs
crates/build-tools/: Cargo.toml
crates/build-tools/src/: lib.rs  main.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/modules/params/: Cargo.toml
crates/modules/variables/: Cargo.toml
crates/utils/: Cargo.toml
crates/utils/src/: ext.rs  modules.rs  ui.rs  util.rs
dynamic/: Cargo.toml
dynamic/src/: consts.rs  ext.rs  frame_info.rs  game_modes.rs  lib.rs  modules.rs  offsets.rs  se.rs  ui.rs  util.rs
dynamic/src/modules/: buffer.rs  input.rs  meter.rs  param.rs  status.rs  var.rs
fighters/: Cargo.toml  rom_watch.txt
fighters/bayonetta/: Cargo.toml
fighters/bayonetta/src/: lib.rs  opff.rs  status.rs
fighters/brave/: Cargo.toml
fighters/brave/src/: lib.rs  menu.rs  opff.rs  status.rs
fighters/buddy/: Cargo.toml
fighters/buddy/src/: lib.rs  opff.rs  status.rs
fighters/captain/: Cargo.toml
fighters/captain/src/: lib.rs  opff.rs  status.rs
fighters/chrom/: Cargo.toml
fighters/chrom/src/: lib.rs  opff.rs  status.rs
fighters/cloud/: Cargo.toml
fighters/cloud/src/: lib.rs  opff.rs  status.rs
fighters/common/: Cargo.toml
fighters/common-dyn/: Cargo.toml
fighters/common-dyn/src/: djc.rs  ext.rs  lib.rs
fighters/common/src/: djc.rs  ext.rs  lib.rs  misc.rs  shoto_status.rs
fighters/daisy/: Cargo.toml
fighters/daisy/src/: lib.rs  opff.rs  status.rs
fighters/dedede/: Cargo.toml
fighters/dedede/src/: lib.rs  opff.rs  status.rs
fighters/demon/: Cargo.toml
fighters/demon/src/: lib.rs  opff.rs  status.rs
fighters/diddy/: Cargo.toml
fighters/diddy/src/: lib.rs  opff.rs  status.rs
fighters/dolly/: Cargo.toml
fighters/dolly/src/: lib.rs  opff.rs  status.rs
fighters/donkey/: Cargo.toml
fighters/donkey/src/: lib.rs  opff.rs  status.rs
fighters/duckhunt/: Cargo.toml
fighters/duckhunt/src/: lib.rs  opff.rs  status.rs
fighters/edge/: Cargo.toml
fighters/edge/src/: lib.rs  opff.rs  status.rs
fighters/eflame/: Cargo.toml
fighters/eflame/src/: lib.rs  opff.rs  status.rs
fighters/elight/: Cargo.toml
fighters/elight/src/: lib.rs  opff.rs  status.rs
fighters/falco/: Cargo.toml
fighters/falco/src/: lib.rs  opff.rs  status.rs
fighters/fox/: Cargo.toml
fighters/fox/src/: lib.rs  opff.rs  status.rs
fighters/gamewatch/: Cargo.toml
fighters/gamewatch/src/: lib.rs  opff.rs  status.rs
fighters/ganon/: Cargo.toml
fighters/ganon/src/: lib.rs  opff.rs  status.rs  vtable_hook.rs
fighters/gaogaen/: Cargo.toml
fighters/gaogaen/src/: lib.rs  opff.rs  status.rs
fighters/gekkouga/: Cargo.toml
fighters/gekkouga/src/: lib.rs  opff.rs  status.rs
fighters/iceclimber/: Cargo.toml
fighters/iceclimber/src/: lib.rs  opff.rs
fighters/ike/: Cargo.toml
fighters/ike/src/: lib.rs  opff.rs  status.rs
fighters/inkling/: Cargo.toml
fighters/inkling/src/: lib.rs  opff.rs  status.rs
fighters/jack/: Cargo.toml
fighters/jack/src/: lib.rs  opff.rs  status.rs
fighters/kamui/: Cargo.toml
fighters/kamui/src/: lib.rs  opff.rs  status.rs
fighters/ken/: Cargo.toml
fighters/ken/src/: lib.rs  opff.rs  status.rs
fighters/kirby/: Cargo.toml
fighters/kirby/src/: lib.rs  opff.rs  status.rs
fighters/koopa/: Cargo.toml
fighters/koopa/src/: lib.rs  opff.rs  status.rs
fighters/koopag/: Cargo.toml
fighters/koopag/src/: lib.rs  opff.rs
fighters/koopajr/: Cargo.toml
fighters/koopajr/src/: lib.rs  opff.rs  (+1 more)
fighters/krool/: Cargo.toml
fighters/link/: Cargo.toml
fighters/littlemac/: Cargo.toml
fighters/lucario/: Cargo.toml
fighters/lucas/: Cargo.toml
fighters/lucina/: Cargo.toml
fighters/luigi/: Cargo.toml
fighters/mario/: Cargo.toml
fighters/mariod/: Cargo.toml
fighters/marth/: Cargo.toml
fighters/master/: Cargo.toml
fighters/metaknight/: Cargo.toml
fighters/mewtwo/: Cargo.toml
fighters/miifighter/: Cargo.toml
fighters/miigunner/: Cargo.toml
fighters/miiswordsman/: Cargo.toml
fighters/murabito/: Cargo.toml
fighters/nana/: Cargo.toml
fighters/ness/: Cargo.toml
fighters/packun/: Cargo.toml
fighters/pacman/: Cargo.toml
fighters/palutena/: Cargo.toml
fighters/peach/: Cargo.toml
fighters/pfushigisou/: Cargo.toml
fighters/pichu/: Cargo.toml
fighters/pickel/: Cargo.toml
fighters/pikachu/: Cargo.toml
fighters/pikmin/: Cargo.toml
fighters/pit/: Cargo.toml
fighters/pitb/: Cargo.toml
fighters/plizardon/: Cargo.toml
fighters/popo/: Cargo.toml
fighters/purin/: Cargo.toml
fighters/pzenigame/: Cargo.toml
fighters/reflet/: Cargo.toml
fighters/richter/: Cargo.toml
fighters/ridley/: Cargo.toml
fighters/robin/: Cargo.toml
fighters/robot/: Cargo.toml
fighters/rockman/: Cargo.toml
fighters/rosetta/: Cargo.toml
fighters/roy/: Cargo.toml
fighters/ryu/: Cargo.toml
fighters/samus/: Cargo.toml
fighters/samusd/: Cargo.toml
fighters/sheik/: Cargo.toml
fighters/shizue/: Cargo.toml
fighters/shulk/: Cargo.toml
fighters/simon/: Cargo.toml
fighters/snake/: Cargo.toml
fighters/sonic/: Cargo.toml
fighters/src/: lib.rs
fighters/szerosuit/: Cargo.toml
fighters/tantan/: Cargo.toml
fighters/toonlink/: Cargo.toml
fighters/trail/: Cargo.toml
fighters/wario/: Cargo.toml
fighters/wiifit/: Cargo.toml
fighters/wolf/: Cargo.toml
fighters/yoshi/: Cargo.toml
fighters/younglink/: Cargo.toml
fighters/zelda/: Cargo.toml
hdr-macros/: Cargo.toml
hdr-macros/src/: lib.rs
plugin/: Cargo.toml  build.rs  tree.txt
plugin/src/: controls.rs  lib.rs  lua.rs  online.rs  random.rs  updater.rs
utils/: Cargo.toml  agent_params.txt  build.rs  rom_watch.txt
utils/src/: consts.rs  ext.rs  game_modes.rs  lib.rs  modules.rs  offsets.rs  ui.rs  util.rs
(+2698 files in other folders)
