[package]
name = "dynamic"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash", features = ["weak_l2cvalue"] }
skyline = "0.2.1"
smash_script = { git = "https://github.com/blu-dev/smash-script", branch = "development" }
hdr-macros = { path = "../hdr-macros" }
bitflags = "1.3.2"
modular-bitfield = "0.11.2"