[package]
name = "fighters"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "./common" }
peach = { path = "./peach", optional = true }

[features]
ignore-common = []
include-peach = ["peach"]