[package]
name = "fighters"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common       = { path = "./common" }
pitb         = { path = "./pitb",         optional = true }
eflame       = { path = "./eflame",       optional = true }
pfushigisou  = { path = "./pfushigisou",  optional = true }
purin        = { path = "./purin",        optional = true }
younglink    = { path = "./younglink",    optional = true }
plizardon    = { path = "./plizardon",    optional = true }
shulk        = { path = "./shulk",        optional = true }
chrom        = { path = "./chrom",        optional = true }
miifighter   = { path = "./miifighter",   optional = true }
gamewatch    = { path = "./gamewatch",    optional = true }
krool        = { path = "./krool",        optional = true }
samusd       = { path = "./samusd",       optional = true }
ryu          = { path = "./ryu",          optional = true }
rosetta      = { path = "./rosetta",      optional = true }
yoshi        = { path = "./yoshi",        optional = true }
lucas        = { path = "./lucas",        optional = true }
link         = { path = "./link",         optional = true }
lucario      = { path = "./lucario",      optional = true }
zelda        = { path = "./zelda",        optional = true }
kamui        = { path = "./kamui",        optional = true }
wolf         = { path = "./wolf",         optional = true }
nana         = { path = "./nana",         optional = true }
tantan       = { path = "./tantan",       optional = true }
koopag       = { path = "./koopag",       optional = true }
ridley       = { path = "./ridley",       optional = true }
gekkouga     = { path = "./gekkouga",     optional = true }
ike          = { path = "./ike",          optional = true }
roy          = { path = "./roy",          optional = true }
rockman      = { path = "./rockman",      optional = true }
peach        = { path = "./peach",        optional = true }
elight       = { path = "./elight",       optional = true }
gaogaen      = { path = "./gaogaen",      optional = true }
falco        = { path = "./falco",        optional = true }
ness         = { path = "./ness",         optional = true }
kirby        = { path = "./kirby",        optional = true }
pikachu      = { path = "./pikachu",      optional = true }
daisy        = { path = "./daisy",        optional = true }
sheik        = { path = "./sheik",        optional = true }
mariod       = { path = "./mariod",       optional = true }
luigi        = { path = "./luigi",        optional = true }
captain      = { path = "./captain",      optional = true }
mario        = { path = "./mario",        optional = true }
jack         = { path = "./jack",         optional = true }
palutena     = { path = "./palutena",     optional = true }
dolly        = { path = "./dolly",        optional = true }
pickel       = { path = "./pickel",       optional = true }
wiifit       = { path = "./wiifit",       optional = true }
pzenigame    = { path = "./pzenigame",    optional = true }
pichu        = { path = "./pichu",        optional = true }
pit          = { path = "./pit",          optional = true }
ken          = { path = "./ken",          optional = true }
brave        = { path = "./brave",        optional = true }
richter      = { path = "./richter",      optional = true }
miiswordsman = { path = "./miiswordsman", optional = true }
reflet        = { path = "./reflet",      optional = true }
master       = { path = "./master",       optional = true }
robot        = { path = "./robot",        optional = true }
szerosuit    = { path = "./szerosuit",    optional = true }
ganon        = { path = "./ganon",        optional = true }
wario        = { path = "./wario",        optional = true }
diddy        = { path = "./diddy",        optional = true }
shizue       = { path = "./shizue",       optional = true }
littlemac    = { path = "./littlemac",    optional = true }
pacman       = { path = "./pacman",       optional = true }
edge         = { path = "./edge",         optional = true }
marth        = { path = "./marth",        optional = true }
trail        = { path = "./trail",        optional = true }
mewtwo       = { path = "./mewtwo",       optional = true }
metaknight   = { path = "./metaknight",   optional = true }
toonlink     = { path = "./toonlink",     optional = true }
koopajr      = { path = "./koopajr",      optional = true }
sonic        = { path = "./sonic",        optional = true }
donkey       = { path = "./donkey",       optional = true }
inkling      = { path = "./inkling",      optional = true }
packun       = { path = "./packun",       optional = true }
miigunner    = { path = "./miigunner",    optional = true }
buddy        = { path = "./buddy",        optional = true }
pikmin       = { path = "./pikmin",       optional = true }
cloud        = { path = "./cloud",        optional = true }
fox          = { path = "./fox",          optional = true }
duckhunt     = { path = "./duckhunt",     optional = true }
lucina       = { path = "./lucina",       optional = true }
murabito     = { path = "./murabito",     optional = true }
bayonetta    = { path = "./bayonetta",    optional = true }
samus        = { path = "./samus",        optional = true }
koopa        = { path = "./koopa",        optional = true }
simon        = { path = "./simon",        optional = true }
popo         = { path = "./popo",         optional = true }
dedede       = { path = "./dedede",       optional = true }
snake        = { path = "./snake",        optional = true }
demon        = { path = "./demon",        optional = true }

[features]
runtime              = []
ignore-common        = []
include-pitb         = ["pitb"]
include-eflame       = ["eflame"]
include-pfushigisou  = ["pfushigisou"]
include-purin        = ["purin"]
include-younglink    = ["younglink"]
include-plizardon    = ["plizardon"]
include-shulk        = ["shulk"]
include-chrom        = ["chrom"]
include-miifighter   = ["miifighter"]
include-gamewatch    = ["gamewatch"]
include-krool        = ["krool"]
include-samusd       = ["samusd"]
include-ryu          = ["ryu"]
include-rosetta      = ["rosetta"]
include-yoshi        = ["yoshi"]
include-lucas        = ["lucas"]
include-link         = ["link"]
include-lucario      = ["lucario"]
include-zelda        = ["zelda"]
include-kamui        = ["kamui"]
include-wolf         = ["wolf"]
include-nana         = ["nana"]
include-tantan       = ["tantan"]
include-koopag       = ["koopag"]
include-ridley       = ["ridley"]
include-gekkouga     = ["gekkouga"]
include-ike          = ["ike"]
include-roy          = ["roy"]
include-rockman      = ["rockman"]
include-peach        = ["peach"]
include-elight       = ["elight"]
include-gaogaen      = ["gaogaen"]
include-falco        = ["falco"]
include-ness         = ["ness"]
include-kirby        = ["kirby"]
include-pikachu      = ["pikachu"]
include-daisy        = ["daisy"]
include-sheik        = ["sheik"]
include-mariod       = ["mariod"]
include-luigi        = ["luigi"]
include-captain      = ["captain"]
include-mario        = ["mario"]
include-jack         = ["jack"]
include-palutena     = ["palutena"]
include-dolly        = ["dolly"]
include-pickel       = ["pickel"]
include-wiifit       = ["wiifit"]
include-pzenigame    = ["pzenigame"]
include-pichu        = ["pichu"]
include-pit          = ["pit"]
include-ken          = ["ken"]
include-brave        = ["brave"]
include-richter      = ["richter"]
include-miiswordsman = ["miiswordsman"]
include-reflet        = ["reflet"]
include-master       = ["master"]
include-robot        = ["robot"]
include-szerosuit    = ["szerosuit"]
include-ganon        = ["ganon"]
include-wario        = ["wario"]
include-diddy        = ["diddy"]
include-shizue       = ["shizue"]
include-littlemac    = ["littlemac"]
include-pacman       = ["pacman"]
include-edge         = ["edge"]
include-marth        = ["marth"]
include-trail        = ["trail"]
include-mewtwo       = ["mewtwo"]
include-metaknight   = ["metaknight"]
include-toonlink     = ["toonlink"]
include-koopajr      = ["koopajr"]
include-sonic        = ["sonic"]
include-donkey       = ["donkey"]
include-inkling      = ["inkling"]
include-packun       = ["packun"]
include-miigunner    = ["miigunner"]
include-buddy        = ["buddy"]
include-pikmin       = ["pikmin"]
include-cloud        = ["cloud"]
include-fox          = ["fox"]
include-duckhunt     = ["duckhunt"]
include-lucina       = ["lucina"]
include-murabito     = ["murabito"]
include-bayonetta    = ["bayonetta"]
include-samus        = ["samus"]
include-koopa        = ["koopa"]
include-simon        = ["simon"]
include-popo         = ["popo"]
include-dedede       = ["dedede"]
include-snake        = ["snake"]
include-demon        = ["demon"]

[build-dependencies]
hdr-macros = { path = "../hdr-macros" }
prc-rs = { git = "https://github.com/ultimate-research/prc-rs", features = ["indexmap-std", "xml-feat"] }
walkdir = "2.3.2"
