[package]
name = "hdr-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.83", features = ["full", "extra-traits"] }
proc-macro2 = "1.0.34"
hash40 = "1.1"
quote = "1.0.14"