[package]
name = "hdr"
version = "0.1.0"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git" }
utils = { path = "../utils" }
fighters = { path = "../fighters" }

[features]
dev = ["utils/no-offset-search"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
