[package]
name = "hdr"
version = "0.0.0-dev"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git" }
utils = { path = "../utils" }
fighters = { path = "../fighters" }

[features]
default = ["peach"]
dev = ["utils/no-offset-search"]
runtime = ["fighters/ignore-common"]

peach = ["fighters/include-peach"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
