[package]
name = "hdr"
version = "0.0.0-dev"
authors = ["hdr-dev-team"]
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = "0.2.1"
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash", features = [
    "weak_l2cvalue",
] }
smashline = { git = "https://github.com/blu-dev/smashline", branch = "development" }
utils = { path = "../utils" }
fighters = { path = "../fighters" }
semver = { version = "1", optional = true }
gh-updater = { git = "https://github.com/blu-dev/gh-updater", optional = true }
skyline-web = { git = "https://github.com/skyline-rs/skyline-web", optional = true }
rand = { git = "https://github.com/skyline-rs/rand" }
ninput = { git = "https://github.com/blu-dev/ninput" }
once_cell = "1"
hid-hdr = { git = "https://github.com/HDR-Development/hid-hdr", features = [
    "warnings",
] }

[patch.crates-io]
ring = { git = "https://github.com/skyline-rs/ring", branch = "0.16.20" }
webpki = { git = "https://github.com/skyline-rs/webpki" }
getrandom = { git = "https://github.com/skyline-rs/getrandom" }


# [patch.'https://github.com/skyline-rs/skyline-web']
# skyline-web = { git = "https://github.com/blu-dev/skyline-web", branch = "less-panics" }

[features]
default = [
    "skyline-web",
    "pitb",
    "eflame",
    "pfushigisou",
    "purin",
    "younglink",
    "plizardon",
    "shulk",
    "chrom",
    "miifighter",
    "gamewatch",
    "krool",
    "samusd",
    "ryu",
    "rosetta",
    "yoshi",
    "lucas",
    "link",
    "lucario",
    "zelda",
    "kamui",
    "wolf",
    "nana",
    "tantan",
    "koopag",
    "ridley",
    "gekkouga",
    "ike",
    "roy",
    "rockman",
    "peach",
    "elight",
    "gaogaen",
    "falco",
    "ness",
    "kirby",
    "pikachu",
    "daisy",
    "sheik",
    "mariod",
    "luigi",
    "captain",
    "mario",
    "jack",
    "palutena",
    "dolly",
    "pickel",
    "wiifit",
    "pzenigame",
    "pichu",
    "pit",
    "ken",
    "brave",
    "richter",
    "miiswordsman",
    "robin",
    "master",
    "robot",
    "szerosuit",
    "ganon",
    "wario",
    "diddy",
    "shizue",
    "littlemac",
    "pacman",
    "edge",
    "marth",
    "trail",
    "mewtwo",
    "metaknight",
    "toonlink",
    "koopajr",
    "sonic",
    "donkey",
    "inkling",
    "packun",
    "miigunner",
    "buddy",
    "pikmin",
    "cloud",
    "fox",
    "duckhunt",
    "lucina",
    "murabito",
    "bayonetta",
    "samus",
    "koopa",
    "simon",
    "popo",
    "dedede",
    "snake",
    "demon",
]
dev = ["utils/no-offset-search"]
main_nro = ["skyline-web"]
add_status = []
runtime = ["fighters/ignore-common", "fighters/runtime"]
pitb = ["fighters/include-pitb"]
eflame = ["fighters/include-eflame"]
pfushigisou = ["fighters/include-pfushigisou"]
purin = ["fighters/include-purin"]
younglink = ["fighters/include-younglink"]
plizardon = ["fighters/include-plizardon"]
shulk = ["fighters/include-shulk"]
chrom = ["fighters/include-chrom"]
miifighter = ["fighters/include-miifighter"]
gamewatch = ["fighters/include-gamewatch"]
krool = ["fighters/include-krool"]
samusd = ["fighters/include-samusd"]
ryu = ["fighters/include-ryu"]
rosetta = ["fighters/include-rosetta"]
yoshi = ["fighters/include-yoshi"]
lucas = ["fighters/include-lucas"]
link = ["fighters/include-link"]
lucario = ["fighters/include-lucario"]
zelda = ["fighters/include-zelda"]
kamui = ["fighters/include-kamui"]
wolf = ["fighters/include-wolf"]
nana = ["fighters/include-nana"]
tantan = ["fighters/include-tantan"]
koopag = ["fighters/include-koopag"]
ridley = ["fighters/include-ridley"]
gekkouga = ["fighters/include-gekkouga"]
ike = ["fighters/include-ike"]
roy = ["fighters/include-roy"]
rockman = ["fighters/include-rockman"]
peach = ["fighters/include-peach"]
elight = ["fighters/include-elight"]
gaogaen = ["fighters/include-gaogaen"]
falco = ["fighters/include-falco"]
ness = ["fighters/include-ness"]
kirby = ["fighters/include-kirby"]
pikachu = ["fighters/include-pikachu"]
daisy = ["fighters/include-daisy"]
sheik = ["fighters/include-sheik"]
mariod = ["fighters/include-mariod"]
luigi = ["fighters/include-luigi"]
captain = ["fighters/include-captain"]
mario = ["fighters/include-mario"]
jack = ["fighters/include-jack"]
palutena = ["fighters/include-palutena"]
dolly = ["fighters/include-dolly"]
pickel = ["fighters/include-pickel"]
wiifit = ["fighters/include-wiifit"]
pzenigame = ["fighters/include-pzenigame"]
pichu = ["fighters/include-pichu"]
pit = ["fighters/include-pit"]
ken = ["fighters/include-ken"]
brave = ["fighters/include-brave"]
richter = ["fighters/include-richter"]
miiswordsman = ["fighters/include-miiswordsman"]
robin = ["fighters/include-robin"]
master = ["fighters/include-master"]
robot = ["fighters/include-robot"]
szerosuit = ["fighters/include-szerosuit"]
ganon = ["fighters/include-ganon"]
wario = ["fighters/include-wario"]
diddy = ["fighters/include-diddy"]
shizue = ["fighters/include-shizue"]
littlemac = ["fighters/include-littlemac"]
pacman = ["fighters/include-pacman"]
edge = ["fighters/include-edge"]
marth = ["fighters/include-marth"]
trail = ["fighters/include-trail"]
mewtwo = ["fighters/include-mewtwo"]
metaknight = ["fighters/include-metaknight"]
toonlink = ["fighters/include-toonlink"]
koopajr = ["fighters/include-koopajr"]
sonic = ["fighters/include-sonic"]
donkey = ["fighters/include-donkey"]
inkling = ["fighters/include-inkling"]
packun = ["fighters/include-packun"]
miigunner = ["fighters/include-miigunner"]
buddy = ["fighters/include-buddy"]
pikmin = ["fighters/include-pikmin"]
cloud = ["fighters/include-cloud"]
fox = ["fighters/include-fox"]
duckhunt = ["fighters/include-duckhunt"]
lucina = ["fighters/include-lucina"]
murabito = ["fighters/include-murabito"]
bayonetta = ["fighters/include-bayonetta"]
samus = ["fighters/include-samus"]
koopa = ["fighters/include-koopa"]
simon = ["fighters/include-simon"]
popo = ["fighters/include-popo"]
dedede = ["fighters/include-dedede"]
snake = ["fighters/include-snake"]
demon = ["fighters/include-demon"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
