[package]
name = "utils"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs" }
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash", features = ["weak_l2cvalue"] }
lazy_static = "1.4.0"
arcropolis-api = { git = "https://github.com/Raytwo/arcropolis_api" }
prc-rs = "1.3"
parking_lot = "0.11.2"
hdr-macros = { path = "../hdr-macros" }

[build-dependencies]
hdr-macros = { path = "../hdr-macros" }
prc-rs = { version = "1.3", features = ["xml"] }
walkdir = "2.3.2"

[features]
no-offset-search = []