[package]
name = "utils"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skyline = "0.2.1"
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash", features = ["weak_l2cvalue"] }
lazy_static = "1.4.0"
arcropolis-api = { git = "https://github.com/Raytwo/arcropolis_api" }
prc-rs = { git = "https://github.com/ultimate-research/prc-rs", features = ["indexmap-std", "xml-feat"] }
parking_lot = "0.11.2"
hdr-macros = { path = "../hdr-macros" }
utils-dyn = { package = "dynamic", path = "../dynamic" }
ninput = { git = "https://github.com/blu-dev/ninput" }
skyline-web = { git = "https://github.com/skyline-rs/skyline-web" }
smash_script = { git = "https://github.com/blu-dev/smash-script", branch = "development" }
once_cell = "1.15.0"
colorgrad = "0.6.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[patch.'https://github.com/jam1garner/smash-arc']
smash-arc = "0.5"

[build-dependencies]
hdr-macros = { path = "../hdr-macros" }
prc-rs = { git = "https://github.com/ultimate-research/prc-rs", features = ["indexmap-std", "xml-feat"] }
walkdir = "2.3.2"

[features]
no-offset-search = []
